apps/talos-home/joplin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joplin
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
