apps/talos-home/joplin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: joplin
  namespace: joplin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`joplin.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain-noauth
          namespace: networking
      services:
        - name: joplin
          port: 22300
  tls:
    secretName: joplin-tls
